修正 process_config_view 网关接口业务ID入参为 path
